--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Microcement installer and design studio based in  Rijeka, Croatia (Hrvatska). Focused on minimalism and industrial design.">
-    <title>Mrak Solutions</title>
+    <meta name="description" content="Tražite pouzdanog instalatera mikrocementa u Rijeci, Hrvatska? C-MENT specijaliziran je za bezšavne podove i završne slojeve od mikrocementa za stambene i poslovne projekte. Kontaktirajte nas danas za besplatnu ponudu.">
+  <meta name="keywords" content="instalater mikrocementa Rijeka, podovi od mikrocementa Hrvatska, završni slojevi mikrocementa, bezšavni cementni podovi, mikrocementa izvođači Rijeka, specijalisti za mikrocement, polirani cementni slojevi, primjene mikrocementa, Rijeka, Hrvatska">
+    <title>C-MENT</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
