meta description edited

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Microcement installer and design studio based in  Rijeka, Croatia (Hrvatska). Focused on minimalism and industrial design.">
-    <meta name="description" content="Tražite pouzdanog instalatera mikrocementa u Rijeci, Hrvatska? C-MENT specijaliziran je za bezšavne podove i završne slojeve od mikrocementa za stambene i poslovne projekte. Kontaktirajte nas danas za besplatnu ponudu.">
-  <meta name="keywords" content="instalater mikrocementa Rijeka, podovi od mikrocementa Hrvatska, završni slojevi mikrocementa, bezšavni cementni podovi, mikrocementa izvođači Rijeka, specijalisti za mikrocement, polirani cementni slojevi, primjene mikrocementa, Rijeka, Hrvatska">
+    <meta name="description" content="Tražite pouzdanog instalatera mikrocementa an području Rijeke i okolice? C-MENT specijaliziran je za mikrocementne podove i završne slojeve od mikrocementa za stambene i poslovne projekte. Kontaktirajte nas danas za besplatnu ponudu.">
+  <meta name="keywords" content="instalater mikrocementa Rijeka, podovi od mikrocementa Hrvatska, završni slojevi mikrocementa, bezšavni cementni podovi, mikrocement izvođači Rijeka, specijalisti za mikrocement, polirani cementni slojevi, primjene mikrocementa, Rijeka, Hrvatska">
     <title>C-MENT</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
